@startuml
interface Compiler {
  +compile(source: String): Expression
}

interface Expression {
  +eval(globals: Bindings): ExprValue
}

Compiler ..> Expression

interface Parser {
  +parse(source: String): IonSexp
}

interface Lexer {
  +tokenize(source: String): List<Token>
}

IonSqlParser --|> Parser
IonSqlParser --o Lexer

IonSqlLexer --|> Lexer

class EvaluatingCompiler

EvaluatingCompiler --|> Compiler
EvaluatingCompiler --o Parser

@enduml
